assets/css/style.css
/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    text-align: center;
    display: flex;
    flex-direction: column;
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
    background-color: lightgrey;

}


/* Header */


main,
footer {
    padding: 0 10px;
}

h1 {
    font-family: "Luckiest Guy", sans-serif;
    letter-spacing: 2px;
    text-align: center;
    font-size: 350%;
    width: 100%;
    background-color: rgb(255, 165, 0);
    cursor: pointer;
    border: 2px solid transparent;
}

h1:hover {
    transition: border-color 0.3s ease;
    border: 2px solid black;
}

main button {
    background-color: rgb(255, 165, 0);
    font-family: "Quicksand", sans-serif;
    font-weight: 900;
    cursor: pointer;
    border: 2px solid transparent;
    /* Reserve space for the border */
}

button:focus,
button:hover {
    transition: border-color 0.3s ease;
    border: 2px solid black;
    /* Smooth transition for border color */
    outline: none;

}

.introduction {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    gap: 20px;
}

.introduction p {
    font-size: 100%;
    padding: 0 15px;
}

.font-icons {
    font-size: 180%;
    display: flex;
}

.font-icons i {
    padding: 0 5px;

}


#start-button {
    width: 70%;
    height: 6rem;
    border-radius: 5%;
    font-size: 200%;
    font-family: "Luckiest Guy", sans-serif;
    cursor: pointer;
    background-color: rgb(255, 165, 0);
    margin-top: 5px;
    border: 2px solid transparent;
}

#start-button:hover,
#start-button:focus {
    border: 2px solid black;
}

/*
* Main
* Make the main element take up any surplus space to push the footer down
* Appears only when the "Lets play" button is clicked
*/
main {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
}

.game-area {
    display: flex;
    flex-direction: column;
}

.game-questions {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: auto;
}

.game-questions>div {
    padding: 5px 10px;
}

.game-questions button {
    font-size: 100%;
    padding: 5px 5px;
    margin: 5px 5px;
    border-radius: 5%;
}

.game-questions p {
    font-size: 110%;
}

.game-selection p {
    margin-bottom: 10px;
}

.game {
    border: 1px solid black;
    height: 15rem;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.dice-result {
    width: 7rem;
    padding: 10px;
    height: auto;
}

#roll-btn {
    width: 50%;
    padding: 10px;
    margin: 10px;
    font-size: 100%;
    border-radius: 5%;
}

.score-area {
    display: flex;
    justify-content: space-around;
    text-align: center;
    padding-top: 15px;
    font-size: 120%;
    font-weight: 800;
}

#tries,
#score {
    color: rgb(254, 253, 253);
    font-size: 130%;
}

#choose-opponent>* {
    padding: 10px;
}

#choose-opponent-btn {
    margin-bottom: 70px;
    font-size: 100%;
    border-radius: 5%;
}

/* versus computer game */



#player-area {
    border: 2px solid red;
}



/*Footer */

footer {
    position: fixed;
    width: 100%;
    bottom: 0;
    padding: 5px;
    background-color: rgb(196, 128, 3);
}

